objects/MTR_User_Management_Setting__mdt.object
<CustomObject>
    <description>This metadata stores the settings for My TR user management service</description>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENTWRP</fullName>
                    <default>true</default>
                    <label>ENTWRP</label>
                </value>
                <value>
                    <fullName>TFMS</fullName>
                </value>
                <value>
                    <fullName>MYTR</fullName>
                </value>
                <value>
                    <fullName>HANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Locales__c</fullName>
        <description>This is the custom field to store supported locales/languages for respective Business Units.</description>
        <label>Supported Locales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S2E</fullName>
                    <default>true</default>
                    <label>S2E</label>
                </value>
                <value>
                    <fullName>GLI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MTR User Management Setting</label>
    <pluralLabel>MTR User Management Settings</pluralLabel>
</CustomObject>